@@ -1,0 +1,31 @@
+/*
+   Copyright (C) 2002-2012, 2014-2019 Free Software Foundation, Inc.
+   Written by Keisuke Nishida, Roger While, Simon Sobisch, Ron Norman
+
+   This file is part of GnuCOBOL.
+
+   The GnuCOBOL runtime library is free software: you can redistribute it
+   and/or modify it under the terms of the GNU Lesser General Public License
+   as published by the Free Software Foundation, either version 3 of the
+   License, or (at your option) any later version.
+
+   GnuCOBOL is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU Lesser General Public License for more details.
+
+   You should have received a copy of the GNU Lesser General Public License
+   along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.
+*/
+
+#ifndef _CONFIG_H
+#include <config.h>
+#define _CONFIG_H
+#endif
+#if defined(WITH_MULTI_ISAM)
+#define IS_ISAM_LIB 1
+#define FOR_VBISAM 1
+
+#include "fisam.c"
+
+#endif
